add graphicspath to the main tex file.

--- a/linuxnotes.tex
+++ b/linuxnotes.tex
@@ -6,6 +6,9 @@
 \usepackage{fontspec}
 \usepackage{xunicode}
 \usepackage{xltxtra}
+
+\graphicspath{{img/}}
+
 \usepackage[svgnames,table]{xcolor}
 \usepackage{booktabs}
 \usepackage{multirow}
