--- a/src/linuxnotes.tex
+++ b/src/linuxnotes.tex
@@ -35,7 +35,6 @@
 
 
 \title{鸟哥的Linux私房菜}
-\author{穷屌丝联盟}
 \date{\today}
 
 
@@ -58,5 +57,7 @@
 \include{alpine}
 
 %\include{linux6}
+
+\include{apache}
 
 \end{document}
